--- a/.github/workflows/containerworkflow.yml
+++ b/.github/workflows/containerworkflow.yml
@@ -17,6 +17,9 @@ jobs:
         - name: 'Checkout GitHub Action'
           uses: actions/checkout@master
           
+        - name: List files in tool cache
+        - run: ls ${{ runner.tool_cache }}
+                    
         - name: 'Build and push image'
           uses: azure/docker-login@v1
           with:
