--- a/.github/workflows/containerworkflow.yml
+++ b/.github/workflows/containerworkflow.yml
@@ -16,9 +16,6 @@ jobs:
         # checkout the repo
         - name: 'Checkout GitHub Action'
           uses: actions/checkout@master
-          
-        - run: | 
-           ls ${{ runner.tool_cache }}
                     
         - name: 'Build and push image'
           uses: azure/docker-login@v1
@@ -27,5 +24,5 @@ jobs:
             username: ${{ secrets.SERVICE_PRINCIPAL_ID }}
             password: ${{ secrets.SERVICE_PRINCIPAL_PASSWORD }}
 
-        - run: docker build . -t ${{ env.IMAGE_NAME }}
+        - run: docker build -f ./dockerdeploydemo/Dockerfile -t ${{ env.IMAGE_NAME }}
         - run: docker push ${{ env.IMAGE_NAME }}
