--- a/.github/workflows/containerworkflow.yml
+++ b/.github/workflows/containerworkflow.yml
@@ -18,11 +18,11 @@ jobs:
           uses: actions/checkout@master
                     
         - name: 'Build and push image'
-          uses: azure/docker-login@v1
+          uses: azure/docker-login@v2
           with:
             login-server: ${{ env.ACR_LOGON_SERVER }}
             username: ${{ secrets.SERVICE_PRINCIPAL_ID }}
             password: ${{ secrets.SERVICE_PRINCIPAL_PASSWORD }}
 
-        - run: docker build ./Dockerfile -t ${{ env.IMAGE_NAME }}
+        - run: docker build . -t ${{ env.IMAGE_NAME }}
         - run: docker push ${{ env.IMAGE_NAME }}
