--- a/.github/workflows/containerworkflow.yml
+++ b/.github/workflows/containerworkflow.yml
@@ -16,13 +16,15 @@ jobs:
         # checkout the repo
         - name: 'Checkout GitHub Action'
           uses: actions/checkout@master
-                    
+          
         - name: 'Build and push image'
-          uses: azure/docker-login@v2
+          uses: azure/docker-login@v1
           with:
-            login-server: ${{ env.ACR_LOGON_SERVER }}
-            username: ${{ secrets.SERVICE_PRINCIPAL_ID }}
-            password: ${{ secrets.SERVICE_PRINCIPAL_PASSWORD }}
+            login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+            username: ${{ secrets.REGISTRY_USERNAME }}
+            password: ${{ secrets.REGISTRY_PASSWORD }}
+        - run: |
+            docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/sampleapp:${{ github.sha }}
+            docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/sampleapp:${{ github.sha }}
+        
 
-        - run: docker build . -t ${{ env.IMAGE_NAME }}
-        - run: docker push ${{ env.IMAGE_NAME }}
