--- a/.github/workflows/containerworkflow.yml
+++ b/.github/workflows/containerworkflow.yml
@@ -17,14 +17,15 @@ jobs:
         - name: 'Checkout GitHub Action'
           uses: actions/checkout@master
           
-        - name: 'Build and push image'
-          uses: azure/docker-login@v1
+        - name: Build and push container image to registry
+          uses: docker/build-push-action@v2
           with:
-            login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-            username: ${{ secrets.REGISTRY_USERNAME }}
-            password: ${{ secrets.REGISTRY_PASSWORD }}
-        - run: |
-            docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/webapp:${{ github.sha }}
-            docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/webapp:${{ github.sha }}
+            push: true
+            tags: |
+             ${{ secrets.REGISTRY_LOGIN_SERVER }}/app:${{ github.sha }}
+            file: ./Dockerfile
+            context: ./
+          
+
         
 
