--- a/.github/workflows/containerworkflow.yml
+++ b/.github/workflows/containerworkflow.yml
@@ -17,6 +17,13 @@ jobs:
         - name: 'Checkout GitHub Action'
           uses: actions/checkout@master
           
+        - name: 'Build and push image'
+          uses: azure/docker-login@v1
+          with:
+            login-server: ${{ env.ACR_LOGON_SERVER }}
+            username: ${{ secrets.SERVICE_PRINCIPAL_ID }}
+            password: ${{ secrets.SERVICE_PRINCIPAL_PASSWORD }}
+          
         - name: Build and push container image to registry
           uses: docker/build-push-action@v2
           with:
