--- a/.github/workflows/containerworkflow.yml
+++ b/.github/workflows/containerworkflow.yml
@@ -29,8 +29,8 @@ jobs:
           with:
             push: true
             tags: |
-             ${{ secrets.REGISTRY_LOGIN_SERVER }}/app:${{ github.sha }}
-             ${{ secrets.REGISTRY_LOGIN_SERVER }}/app:latest
+             ${{ secrets.REGISTRY_LOGIN_SERVER }}/webapp:${{ github.sha }}
+             ${{ secrets.REGISTRY_LOGIN_SERVER }}/webapp:latest
             file: dockerdeploydemo/Dockerfile
             context: ./
           
