--- a/.github/workflows/deploytoAKS.yml
+++ b/.github/workflows/deploytoAKS.yml
@@ -24,8 +24,17 @@ jobs:
             username: ${{ secrets.SERVICE_PRINCIPAL_ID }}
             password: ${{ secrets.SERVICE_PRINCIPAL_PASSWORD }}
 
-        - run: docker build . -t ${{ env.IMAGE_NAME }}
-        - run: docker push ${{ env.IMAGE_NAME }}
+        #- run: docker build . -t ${{ env.IMAGE_NAME }}
+        #- run: docker push ${{ env.IMAGE_NAME }}
+        
+        - name: Build and push container image to registry
+          uses: docker/build-push-action@v2
+          with:
+            push: true
+            tags: |
+             ${{ secrets.REGISTRY_LOGIN_SERVER }}/webapp:${{ github.sha }}
+            file: dockerdeploydemo/Dockerfile
+            context: ./
     
     deploy-to-aks:
       
