--- a/.github/workflows/deploytoAKS.yml
+++ b/.github/workflows/deploytoAKS.yml
@@ -75,8 +75,8 @@ jobs:
       - uses: azure/k8s-deploy@v1
         with:
           manifests: |
-            ./manifests/deployment.yml
-            ./manifests/service.yml
+            deployment.yml
+            service.yml
           images: |
             ${{ env.IMAGE_NAME }}
           imagepullsecrets: |
