--- a/.github/workflows/deploytoAKS.yml
+++ b/.github/workflows/deploytoAKS.yml
@@ -43,6 +43,8 @@ jobs:
       if: github.ref == 'refs/heads/main'
 
       needs: build-deploy-image
+      
+      environment: PROD
           
       #env:
         #NAMESPACE: dummy
